1ra. parte diseño terminado. 08042021

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AppKEA4PermisoCamara</string>
+    <string name="valbtntomarfoto">TOMAR FOTO</string>
+    <string name="valbtncompartir">COMPARTIR FOTO</string>
 </resources>
